panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__enum__test_conversion_to_and_from_integral.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: invalid implicit conversion from `int` to `enum E~1 complete`
   ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:9:12]
   │
 9 │ enum E y = 2;
   │            ┬  
   │            ╰── this is of type `int`, which cannot be implicitly converted to `enum E~1 complete`
───╯

Error: invalid explicit conversion from `int` to `enum E~1 complete`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:10:17]
    │
 10 │ int z = (enum E)B;
    │                 ┬  
    │                 ╰── this is of type `int`, which cannot be explicitly converted to `enum E~1 complete`
────╯

Error: invalid implicit conversion from `enum E~1 complete` to `int`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:10:17]
    │
 10 │ int z = (enum E)B;
    │                 ┬  
    │                 ╰── this is of type `enum E~1 complete`, which cannot be implicitly converted to `int`
────╯

Error: invalid implicit conversion from `enum E~1 complete` to `int`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:13:13]
    │
 13 │     int a = y;
    │             ┬  
    │             ╰── this is of type `enum E~1 complete`, which cannot be implicitly converted to `int`
────╯

Error: invalid explicit conversion from `int` to `enum E~1 complete`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:14:21]
    │
 14 │     int b = (enum E)B;
    │                     ┬  
    │                     ╰── this is of type `int`, which cannot be explicitly converted to `enum E~1 complete`
────╯

Error: invalid implicit conversion from `enum E~1 complete` to `int`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:14:21]
    │
 14 │     int b = (enum E)B;
    │                     ┬  
    │                     ╰── this is of type `enum E~1 complete`, which cannot be implicitly converted to `int`
────╯

Error: invalid implicit conversion from `int` to `enum E~1 complete`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:20:16]
    │
 20 │     enum E a = A;
    │                ┬  
    │                ╰── this is of type `int`, which cannot be implicitly converted to `enum E~1 complete`
────╯

Error: invalid implicit conversion from `int` to `enum E~1 complete`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:21:16]
    │
 21 │     enum E b = 1;
    │                ┬  
    │                ╰── this is of type `int`, which cannot be implicitly converted to `enum E~1 complete`
────╯

Error: invalid implicit conversion from `enum E~1 complete` to `enum E~1 complete`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:23:23]
    │
 23 │     printf("%d %d\n", a, b);
    │                       ┬  
    │                       ╰── this is of type `enum E~1 complete`, which cannot be implicitly converted to `enum E~1 complete`
────╯

Error: invalid implicit conversion from `enum E~1 complete` to `enum E~1 complete`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:23:26]
    │
 23 │     printf("%d %d\n", a, b);
    │                          ┬  
    │                          ╰── this is of type `enum E~1 complete`, which cannot be implicitly converted to `enum E~1 complete`
────╯

Error: invalid explicit conversion from `enum E~1 complete` to `int`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:27:18]
    │
 27 │     int a = (int)x;
    │                  ┬  
    │                  ╰── this is of type `enum E~1 complete`, which cannot be explicitly converted to `int`
────╯

Error: invalid explicit conversion from `enum E~1 complete` to `int`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:28:18]
    │
 28 │     int b = (int)y;
    │                  ┬  
    │                  ╰── this is of type `enum E~1 complete`, which cannot be explicitly converted to `int`
────╯

Error: invalid explicit conversion from `int` to `enum E~1 complete`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:34:24]
    │
 34 │     enum E a = (enum E)A;
    │                        ┬  
    │                        ╰── this is of type `int`, which cannot be explicitly converted to `enum E~1 complete`
────╯

Error: invalid implicit conversion from `enum E~1 complete` to `enum E~1 complete`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:34:24]
    │
 34 │     enum E a = (enum E)A;
    │                        ┬  
    │                        ╰── this is of type `enum E~1 complete`, which cannot be implicitly converted to `enum E~1 complete`
────╯

Error: invalid explicit conversion from `int` to `enum E~1 complete`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:35:24]
    │
 35 │     enum E b = (enum E)1;
    │                        ┬  
    │                        ╰── this is of type `int`, which cannot be explicitly converted to `enum E~1 complete`
────╯

Error: invalid implicit conversion from `enum E~1 complete` to `enum E~1 complete`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:35:24]
    │
 35 │     enum E b = (enum E)1;
    │                        ┬  
    │                        ╰── this is of type `enum E~1 complete`, which cannot be implicitly converted to `enum E~1 complete`
────╯

Error: invalid explicit conversion from `int` to `enum E~1 complete`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:36:24]
    │
 36 │     enum E c = (enum E)C;
    │                        ┬  
    │                        ╰── this is of type `int`, which cannot be explicitly converted to `enum E~1 complete`
────╯

Error: invalid implicit conversion from `enum E~1 complete` to `enum E~1 complete`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:36:24]
    │
 36 │     enum E c = (enum E)C;
    │                        ┬  
    │                        ╰── this is of type `enum E~1 complete`, which cannot be implicitly converted to `enum E~1 complete`
────╯

Error: invalid implicit conversion from `enum E~1 complete` to `enum E~1 complete`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:38:26]
    │
 38 │     printf("%d %d %d\n", a, b, c);
    │                          ┬  
    │                          ╰── this is of type `enum E~1 complete`, which cannot be implicitly converted to `enum E~1 complete`
────╯

Error: invalid implicit conversion from `enum E~1 complete` to `enum E~1 complete`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:38:29]
    │
 38 │     printf("%d %d %d\n", a, b, c);
    │                             ┬  
    │                             ╰── this is of type `enum E~1 complete`, which cannot be implicitly converted to `enum E~1 complete`
────╯

Error: invalid implicit conversion from `enum E~1 complete` to `enum E~1 complete`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:38:32]
    │
 38 │     printf("%d %d %d\n", a, b, c);
    │                                ┬  
    │                                ╰── this is of type `enum E~1 complete`, which cannot be implicitly converted to `enum E~1 complete`
────╯

Error: invalid implicit conversion from `enum E~1 complete` to `enum E~1 complete`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:47:26]
    │
 47 │     printf("%d %d %d\n", x, y, z);
    │                          ┬  
    │                          ╰── this is of type `enum E~1 complete`, which cannot be implicitly converted to `enum E~1 complete`
────╯

Error: invalid implicit conversion from `enum E~1 complete` to `enum E~1 complete`
    ╭─[panko/tests/cases/execute/enum/test_conversion_to_and_from_integral.c:47:29]
    │
 47 │     printf("%d %d %d\n", x, y, z);
    │                             ┬  
    │                             ╰── this is of type `enum E~1 complete`, which cannot be implicitly converted to `enum E~1 complete`
────╯
