panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__enum__test_conversion_with_fixed_underlying_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/enum/test_conversion_with_fixed_underlying_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_conversion_with_fixed_underlying_type.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (enum E~1
      (enumerators `short`
         (enumerator A~2 0 `int` 0)
         (enumerator B~3 1 `int` 1)
         (enumerator C~4 2 `int` 2)))
   (function-definition external stack-size=40
      (main~5 `fn() -> int` (static main))
      (compound-statement
         (definition (x~7 `enum E~1 complete` @0) (truncate `enum E~1 complete` @0 (32767 `int` @4)))
         (definition (y~8 `enum E~1 complete` @2) (truncate `enum E~1 complete` @2 (32768 `int` @4)))
         (expression
            (call `int` @4
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 7>>` @16
                        (string `array<char; 7>` @void "%d %d\n\0"))))
               (sign-extend `int` @24 (x~7 `enum E~1 complete` @0))
               (sign-extend `int` @28 (y~8 `enum E~1 complete` @2))))
         (return
            (less `int` @4
               (sign-extend `int` @4 (y~8 `enum E~1 complete` @2))
               (sign-extend `int` @8 (x~7 `enum E~1 complete` @0)))))))

----- stderr -----
