panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__enum__test_enum_arithmetic.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/enum/test_enum_arithmetic.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_enum_arithmetic.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (enum E~1
      (enumerators
         (enumerator A~2 0 `int` 0)
         (enumerator B~3 1 `int` 1)
         (enumerator C~4 2 `int` 2)
         (enumerator D~5 3 `int` 3)))
   (function-definition external stack-size=56
      (main~6 `fn() -> int` (static main))
      (compound-statement
         (definition (a~8 `enum E~1 complete` @0) (noop-type-conversion `enum E~1 complete` @0 (0 `int` @0)))
         (definition (b~9 `enum E~1 complete` @4) (noop-type-conversion `enum E~1 complete` @4 (1 `int` @4)))
         (definition (c~10 `enum E~1 complete` @8) (noop-type-conversion `enum E~1 complete` @8 (2 `int` @8)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 16>>` @24
                        (string `array<char; 16>` @void "%d %d %d %d %d\n\0"))))
               (noop-type-conversion `unsigned int` @0 (a~8 `enum E~1 complete` @0))
               (add `unsigned int` @32
                  (noop-type-conversion `unsigned int` @0 (a~8 `enum E~1 complete` @0))
                  (noop-type-conversion `unsigned int` @36 (1 `int` @36)))
               (add `unsigned int` @36
                  (noop-type-conversion `unsigned int` @4 (b~9 `enum E~1 complete` @4))
                  (noop-type-conversion `unsigned int` @8 (c~10 `enum E~1 complete` @8)))
               (multiply `unsigned int` @40
                  (noop-type-conversion `unsigned int` @40 (3 `int` @40))
                  (noop-type-conversion `unsigned int` @8 (c~10 `enum E~1 complete` @8)))
               (left-shift `unsigned int` @44
                  (noop-type-conversion `unsigned int` @4 (b~9 `enum E~1 complete` @4))
                  (noop-type-conversion `unsigned int` @8 (c~10 `enum E~1 complete` @8))))))))

----- stderr -----
