panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__enum__test_enum_arithmetic_unary.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/enum/test_enum_arithmetic_unary.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: cannot apply unary plus operator to expression with type `enum E~1 complete` (arithmetic type required)
    ╭─[panko/tests/cases/execute/enum/test_enum_arithmetic_unary.c:13:39]
    │
 13 │     printf("%d %d %d 0x%08x %d %d\n", +a, +b, -b, ~c, !a, !b);
    │                                       ─┬  
    │                                        ╰── in this expression
────╯

Error: cannot apply unary plus operator to expression with type `enum E~1 complete` (arithmetic type required)
    ╭─[panko/tests/cases/execute/enum/test_enum_arithmetic_unary.c:13:43]
    │
 13 │     printf("%d %d %d 0x%08x %d %d\n", +a, +b, -b, ~c, !a, !b);
    │                                           ─┬  
    │                                            ╰── in this expression
────╯

Error: cannot apply unary minus operator to expression with type `enum E~1 complete` (arithmetic type required)
    ╭─[panko/tests/cases/execute/enum/test_enum_arithmetic_unary.c:13:47]
    │
 13 │     printf("%d %d %d 0x%08x %d %d\n", +a, +b, -b, ~c, !a, !b);
    │                                               ─┬  
    │                                                ╰── in this expression
────╯

Error: cannot apply bitwise complement operator to expression with type `enum E~1 complete` (integral type required)
    ╭─[panko/tests/cases/execute/enum/test_enum_arithmetic_unary.c:13:51]
    │
 13 │     printf("%d %d %d 0x%08x %d %d\n", +a, +b, -b, ~c, !a, !b);
    │                                                   ─┬  
    │                                                    ╰── in this expression
────╯
