panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__enum__test_enum_as_function_parameter.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/enum/test_enum_as_function_parameter.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_enum_as_function_parameter.c"
   (enum E~0
      (enumerators `unsigned int`
         (enumerator A~1 0 `int` 0)
         (enumerator B~2 1 `int` 1)
         (enumerator C~3 2 `int` 2)))
   (tentative-definition external (x~4 `enum E~0 complete` (static x)) ∅)
   (function-definition external stack-size=24
      (f~5 `fn(e: enum E~0 complete) -> int` (static f))
      (params
         (e~7 `enum E~0 complete` @0))
      (compound-statement
         (return (truncate `int` @4 (4 `unsigned long` @8)))))
   (function-definition external stack-size=24
      (main~8 `fn() -> int` (static main))
      (compound-statement
         (return
            (call `int` @0
               (addressof `ptr<fn(e: enum E~0 complete) -> int>` @8
                  (f~5 `fn(e: enum E~0 complete) -> int` (static f)))
               (x~4 `enum E~0 complete` (static x)))))))

----- stderr -----
