panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__enum__test_enum_pointer_arithmetic.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/enum/test_enum_pointer_arithmetic.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_enum_pointer_arithmetic.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (enum E~1
      (enumerators
         (enumerator A~2 0 `int` 0)
         (enumerator B~3 1 `int` 1)
         (enumerator C~4 2 `int` 2)
         (enumerator D~5 3 `int` 3)))
   (function-definition external stack-size=88
      (main~6 `fn() -> int` (static main))
      (compound-statement
         (definition (xs~8 `array<int; 5>` @0)
            (braced
               (subobject +0 (42 `int` @0))
               (subobject +4 (27 `int` @4))
               (subobject +8 (5 `int` @8))
               (subobject +12 (123 `int` @12))
               (subobject +16 (456 `int` @16))))
         (definition (p~9 `ptr<int>` @24)
            (noop-type-conversion `ptr<int>` @24
               (addressof `ptr<array<int; 5>>` @24
                  (xs~8 `array<int; 5>` @0))))
         (definition (offset~10 `enum E~1 complete` @32) (noop-type-conversion `enum E~1 complete` @32 (1 `int` @32)))
         (expression
            (combine `ptr<int>` @40
               (assign `ptr<ptr<int>>` @48
                  (unnamed-temporary~11 `ptr<ptr<int>>` @48)
                  (addressof `ptr<ptr<int>>` @48
                     (p~9 `ptr<int>` @24)))
               (assign `ptr<int>` @40
                  (deref `ptr<int>` @40 (unnamed-temporary~11 `ptr<ptr<int>>` @48))
                  (ptr-add `ptr<int>` @56
                     (deref `ptr<int>` @56 (unnamed-temporary~11 `ptr<ptr<int>>` @48))
                     (zero-extend `long` @64 (offset~10 `enum E~1 complete` @32))))))
         (definition (a~12 `int` @36)
            (deref `int` @36
               (ptr-add `ptr<int>` @40
                  (p~9 `ptr<int>` @24)
                  (zero-extend `long` @48 (noop-type-conversion `enum E~1 complete` @56 (0 `int` @56))))))
         (expression
            (assign `enum E~1 complete` @32
               (offset~10 `enum E~1 complete` @32)
               (noop-type-conversion `enum E~1 complete` @32 (2 `int` @32))))
         (definition (b~13 `int` @40)
            (deref `int` @40
               (ptr-add `ptr<int>` @48
                  (p~9 `ptr<int>` @24)
                  (zero-extend `long` @56 (offset~10 `enum E~1 complete` @32)))))
         (expression
            (assign `enum E~1 complete` @32
               (offset~10 `enum E~1 complete` @32)
               (noop-type-conversion `enum E~1 complete` @32 (1 `int` @32))))
         (definition (c~14 `int` @44)
            (deref `int` @44
               (ptr-sub `ptr<int>` @48
                  (p~9 `ptr<int>` @24)
                  (zero-extend `long` @56 (offset~10 `enum E~1 complete` @32)))))
         (definition (d~15 `int` @48)
            (deref `int` @48
               (ptr-add `ptr<int>` @56
                  (zero-extend `long` @56 (offset~10 `enum E~1 complete` @32))
                  (p~9 `ptr<int>` @24))))
         (expression
            (call `int` @52
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @56
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @64
                  (noop-type-conversion `ptr<char>` @64
                     (addressof `ptr<array<char; 13>>` @64
                        (string `array<char; 13>` @void "%d %d %d %d\n\0"))))
               (a~12 `int` @36)
               (b~13 `int` @40)
               (c~14 `int` @44)
               (d~15 `int` @48))))))

----- stderr -----
